Intro to Offensive Security

--- a/tryHackMe/Paths/Free Offensive Security Training/.vscode/settings.json
+++ b/tryHackMe/Paths/Free Offensive Security Training/.vscode/settings.json
@@ -4,6 +4,7 @@
         "darkstar",
         "dpkg",
         "ffuf",
+        "gobuster",
         "hotspots",
         "Joomla",
         "Kenobi",
@@ -25,6 +26,8 @@
         "Vulnversity",
         "webserver",
         "whois",
-        "windscribe"
-    ]
+        "windscribe",
+        "wordlist"
+    ],
+    "workbench.editor.pinnedTabsOnSeparateRow":true,
 }
