--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "bruteforce",
         "darkstar",
         "dpkg",
+        "exploitdb",
+        "fdisk",
         "ffuf",
         "gobuster",
         "hotspots",
@@ -11,15 +13,18 @@
         "Maltego",
         "Metasploit",
         "Morty",
+        "Netcat",
         "Nmap",
         "nslookup",
         "NTFS",
+        "NTLM",
         "ovpn",
         "OWASP",
         "pentest",
         "pentesting",
         "practise",
         "proftpd",
+        "searchsploit",
         "Shodan",
         "Starkiller",
         "traceroute",
@@ -30,4 +35,7 @@
         "wordlist"
     ],
     "workbench.editor.pinnedTabsOnSeparateRow":true,
+    "markdownlint.config": {
+        "MD033": false,
+    },
 }
