--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "binwalk",
         "bruteforce",
         "darkstar",
         "dpkg",
+        "exiftool",
         "exploitdb",
         "fdisk",
         "ffuf",
@@ -22,16 +24,20 @@
         "OWASP",
         "pentest",
         "pentesting",
+        "pper",
         "practise",
         "proftpd",
         "searchsploit",
         "Shodan",
+        "SINT",
         "Starkiller",
+        "steghide",
         "traceroute",
         "Vulnversity",
         "webserver",
         "whois",
         "windscribe",
+        "Woodflint",
         "wordlist"
     ],
     "workbench.editor.pinnedTabsOnSeparateRow":true,
