--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "ffuf",
         "gobuster",
         "hotspots",
+        "intitle",
         "Joomla",
         "Kenobi",
         "Maltego",
