Linux Fundamentals Part 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
     "cSpell.words": [
+        "ablog",
+        "Beepboop",
+        "Bingbot",
         "binwalk",
         "bruteforce",
         "darkstar",
+        "defences",
+        "dont",
         "dpkg",
         "exiftool",
         "exploitdb",
@@ -34,6 +39,7 @@
         "Starkiller",
         "steghide",
         "traceroute",
+        "tryhackme",
         "Vulnversity",
         "webserver",
         "whois",
