Linux Fundamentals Part 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,10 @@
         "Maltego",
         "Metasploit",
         "Morty",
+        "myfile",
+        "myfolder",
         "Netcat",
+        "newnote",
         "Nmap",
         "nslookup",
         "NTFS",
