Linux Fundamentals Part 3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "ablog",
+        "backgrounded",
         "Beepboop",
         "Bingbot",
         "binwalk",
@@ -23,6 +24,7 @@
         "Morty",
         "myfile",
         "myfolder",
+        "myservice",
         "Netcat",
         "newnote",
         "Nmap",
