--- a/tryHackMe/Paths/Introduction to Cyber Security/.vscode/settings.json
+++ b/tryHackMe/Paths/Introduction to Cyber Security/.vscode/settings.json
@@ -1,6 +1,27 @@
 {
     "cSpell.words": [
+        "Alya",
         "DFIR",
-        "SIEM"
-    ]
+        "Exfiltration",
+        "exiftool",
+        "gobuster",
+        "IDOR",
+        "iloveyou",
+        "IPDB",
+        "nmap",
+        "pdfinfo",
+        "qwertyuiop",
+        "SIEM",
+        "Weaponization",
+        "wordlist"
+    ],
+    "[markdown]": {
+        "editor.codeActionsOnSave": {
+            "source.fixAll.markdownlint": true
+        },
+    },
+    "markdownlint.config": {
+        "MD040":false,
+        "MD033":false
+    }
 }
