THM - paths - pre-security  - content

--- a/tryHackMe/Paths/Pre Security/.vscode/settings.json
+++ b/tryHackMe/Paths/Pre Security/.vscode/settings.json
@@ -1,27 +1,28 @@
 {
-    "cSpell.words": [
-        "Alya",
-        "DFIR",
-        "Exfiltration",
-        "exiftool",
-        "gobuster",
-        "IDOR",
-        "iloveyou",
-        "IPDB",
-        "nmap",
-        "pdfinfo",
-        "qwertyuiop",
-        "SIEM",
-        "Weaponization",
-        "wordlist"
-    ],
-    "[markdown]": {
-        "editor.codeActionsOnSave": {
-            "source.fixAll.markdownlint": true
-        },
-    },
-    "markdownlint.config": {
-        "MD040":false,
-        "MD033":false
+  "cSpell.words": [
+    "Alya",
+    "DFIR",
+    "Exfiltration",
+    "exiftool",
+    "gobuster",
+    "IDOR",
+    "iloveyou",
+    "IPDB",
+    "nmap",
+    "NTFS",
+    "pdfinfo",
+    "qwertyuiop",
+    "SIEM",
+    "Weaponization",
+    "wordlist"
+  ],
+  "[markdown]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.markdownlint": "explicit"
     }
+  },
+  "markdownlint.config": {
+    "MD040": false,
+    "MD033": false
+  }
 }
