THM - paths - pre-security  - network 1

--- a/tryHackMe/Paths/Pre Security/.vscode/settings.json
+++ b/tryHackMe/Paths/Pre Security/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
     "Alya",
+    "Berners",
+    "datagram",
     "DFIR",
     "Exfiltration",
     "exiftool",
@@ -13,6 +15,7 @@
     "pdfinfo",
     "qwertyuiop",
     "SIEM",
+    "subnetting",
     "Weaponization",
     "wordlist"
   ],
